# OmenNotes

./: .gitignore  CMakeLists.txt  Main.qml  README.md  WelcomeScreen.qml  main.cpp  workspace.qml
canvas/: DrawingCanvas.cpp  DrawingCanvas.h
database/: ExplorerModel.cpp  ExplorerModel.h  NoteManager.cpp  NoteManager.h
